--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><p>Rohan.</p></div>
-            
+            <div class="logo">
+                <p>Rohan.</p>
+            </div>
+
             <ul class="nav-menu">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
@@ -44,7 +46,7 @@
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-solid fa-envelope"></i>
                     <i class="fa-brands fa-github"></i>
-               </div>
+                </div>
             </div>
             <!-- <div class="rightsection">
                 <div class="home-image">
@@ -57,40 +59,43 @@
         <section id="About">
             <h2>ABOUT <span>ME</span></h2>
             <div class="About-menu">
-                <div class="profie">   
+                <div class="profie">
                     <img src="asset/im2.png" alt="">
                 </div>
-                <ul class="details">
-                    <li><span class="edu">Education Qualification</span>
-
-                        <div>BSC in CSE</div>
-                        <p>Institute : Uttara University, Dhaka</p>
-                        <p> Session : 2024 - 25 </p>
-                        <p> Result : Running (1st Semester)</p>
-                        <div>Diploma In Computer Technology</div>
-
-                        <p> Institute : Kurigram Polytechnic Institute, Kurigram
-                        <p> Session : 2019 - 20
-                        <p> Result : CGPA 3.83 out of 4.00
-
-                        <div>Secondary School Certificate (SSC)</div>
-
-                        <p>Institute : Adarsha High School, Dhaka</p>
-                        <p> Session : 2016 - 17 </p>
-                        <p> Result : GPA 4.61 out of 5.00</p>
-
-
+                <div class="details">
+                <ul class="detail-menu">
+                    <li class="common">
+                       <h5>Education Qualification</h5>
                     </li>
-                    <li><span>Short Course</span> </li>
-                    <li><span>Experience</span></li>
+                    <li class="common"><h5>Short Course</h5></li>
+                    <li class="common"><h5>Experience</h5></li>
                 </ul>
+                <div id="tab-1" class="active">
+
+                    <div>BSC in CSE</div>
+                    <p>Institute : Uttara University, Dhaka</p>
+                    <p> Session : 2024 - 25 </p>
+                    <p> Result : Running (1st Semester)</p>
+                    <div>Diploma In Computer Technology</div>
+
+                    <p> Institute : Kurigram Polytechnic Institute, Kurigram
+                    <p> Session : 2019 - 20
+                    <p> Result : CGPA 3.83 out of 4.00
+
+                    <div>Secondary School Certificate (SSC)</div>
+
+                    <p>Institute : Adarsha High School, Dhaka</p>
+                    <p> Session : 2016 - 17 </p>
+                    <p> Result : GPA 4.61 out of 5.00</p>
+                </div>
+            </div>
             </div>
         </section>
         <section id="Skill">
             <h2>MY <span>SKILL</span></h2>
             <h3>Using Now :</h3>
             <div class="using-learning-other">
-                <img src="asset/logo/pngegg.png" alt="">        
+                <img src="asset/logo/pngegg.png" alt="">
                 <img src="asset/logo/pngegg (1).png" alt="">
                 <img src="asset/logo/pngegg (2).png" alt="">
                 <img src="asset/logo/pngegg (3).png" alt="">
@@ -115,39 +120,45 @@
                 <div class="service-item">
                     <i class="fa-solid fa-globe"></i>
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda vero!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus
+                        explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda
+                        vero!
                     </p>
-                    
+
                 </div>
                 <div class="service-item">
                     <i class="fa-solid fa-code"></i>
                     <h4>Web Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda vero!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus
+                        explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda
+                        vero!
                     </p>
                 </div>
                 <div class="service-item">
                     <i class="fa-solid fa-paint-roller"></i>
                     <h4>Graphic Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda vero!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis dolorem necessitatibus
+                        explicabo ipsum nam corrupti eum culpa, blanditiis, amet accusantium, animi quidem assumenda
+                        vero!
                     </p>
                 </div>
             </div>
         </section>
         <section id="Contact">
             <h2>CONTACT <span>ME</span></h2>
-            <form action="" >
-                <input type="text" id="First" name="First Name" placeholder="First Name">
-                <input type="text" id="Second" name="Second Name" placeholder="Second Name">
+            <form action="">
+                <input type="text" id="Name" name="Name" placeholder="Full Name">
+                <!-- <input type="text" id="Second" name="Second Name" placeholder="Second Name"> -->
                 <input type="text" maxlength="10" size="10" name="Phone" id="Phone" placeholder="Phone">
                 <input type="text" name="Subject" id="Subject" placeholder="Subject">
                 <input type="email" name="Email" id="Email" placeholder="Email">
                 <textarea name="message" id="message" placeholder="Message"></textarea>
-                <input type="submit" id="Submit" value="submit" >
+                <input type="submit" id="Submit" value="submit">
             </form>
         </section>
     </main>
     <footer>
-       &copy; 2025 All Rights Reserved By ROHAN.
+        &copy; 2025 All Rights Reserved By ROHAN.
     </footer>
 </body>
 
